# goose

./: CHANGELOG.md  Cargo.toml  build.rs
.github/prompts/v1/: quality_review.md
.github/scripts/: README.md  goosebot_review.py  test_goosebot.py
.github/workflows/: goosebot_review.yml
examples/: simple.rs
goose_codegen/: Cargo.toml
goose_codegen/src/: lib.rs
memory-bank/: activeContext.md  ci-fix-implemented.md  gaggle-grpc-implementation-plan.md  issue637-plan.md  multi-protocol-implementation-plan.md  phase1-implementation-plan.md  progress.md
proto/: gaggle.proto
src/: config.rs  goose.rs  graph.rs  lib.rs  manager.rs  metrics.rs  pola.rs  report.rs  worker.rs
src/docs/goose-book/src/: SUMMARY.md
src/docs/goose-book/src/getting-started/: metrics.md
src/gaggle/: config.rs  manager.rs  metrics.rs  mod.rs  worker.rs
src/metrics/: common.rs
src/report/: markdown.rs
tests/: gaggle.rs  gaggle_manager_integration.rs  gaggle_worker_integration.rs  one_taskset.rs  scenarios.rs  status_code_response_times.rs  ttfb_validation.rs  user_metrics_graph_reset.rs
