[package]
name = "goose"
version = "0.19.0-dev"
authors = ["Jeremy Andrews <jeremy@tag1consulting.com>"]
edition = "2021"
description = "A load testing framework inspired by Locust."
homepage = "https://tag1.com/goose"
documentation = "https://book.goose.rs"
repository = "https://github.com/tag1consulting/goose"
readme = "README.md"
keywords = ["loadtesting", "performance", "web", "framework", "tool"]
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
bytes = "1.10.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ctrlc = "3"
downcast-rs = "2.0"
flume = "0.11"
futures = "0.3"
futures-core = "0.3.31"
gumdrop = "0.8"
http = "1.1"
http-body-util = "0.1.3"
itertools = "0.14"
lazy_static = "1.4"
log = "0.4"
num-format = "0.4"
prost = { version = "0.14", optional = true }
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "gzip",
    "json",
] }
serde = { version = "1.0", features = [
    "derive",
] }
serde_json = "1.0"
simplelog = "0.12"
strum = "0.27"
strum_macros = "0.27"
thiserror = "2.0"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
    "sync",
] }
tokio-stream = { version = "0.1", optional = true }
tokio-tungstenite = "0.27"
tonic = { version = "0.14", optional = true }
tonic-prost = { version = "0.14", optional = true }
tungstenite = "0.27"
url = "2"
uuid = { version = "1.3", features = ["v4"], optional = true }

[features]
# Include cookies by default for backward compatibility and expected behavior in web load testing
default = ["reqwest/default-tls", "cookies"]
# Include cookies with rustls-tls to maintain consistent behavior regardless of TLS backend choice.
# This ensures users don't lose cookie functionality when switching from native-tls to rustls-tls
# for performance or dependency reasons. Cookie handling is logically independent of TLS implementation.
rustls-tls = ["reqwest/rustls-tls", "tokio-tungstenite/rustls", "cookies"]
# Cookie support - can be completely disabled by compiling with --no-default-features for maximum performance
cookies = ["reqwest/cookies"]
# Gaggle distributed load testing feature
gaggle = ["tonic", "prost", "tokio-stream", "uuid", "tonic-prost-build", "prost-types", "tonic-prost"]

[build-dependencies]
rustc_version = "0.4"
prost-build = { version = "0.14", optional = true }
prost-types = { version = "0.14", optional = true }
tonic-build = { version = "0.14", optional = true }
tonic-prost-build = { version = "0.14", optional = true }

[dev-dependencies]
httpmock = "0.7"
native-tls = "0.2"
nix = { version = "0.30", features = ["signal"] }
rustls = "0.23"
serial_test = "3.2"
