[package]
name = "goose_codegen"
version = "0.1.0"
authors = ["Jeremy Andrews <jeremy@tag1consulting.com>"]
edition = "2018"

[lib]
crate_type = ["proc-macro"]

[dependencies]
proc-macro2 = "1"
quote = "1"
# "extra-traits" is for Debug. Disable this when releasing to crates.io
syn = { version = "1", features = ["extra-traits"] }
